--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "radium": "^0.26.2",
     "react": "^18.1.0",
+    "react-animations": "^1.0.0",
     "react-dom": "^18.1.0",
     "react-keyboard-event-handler": "^1.5.4",
     "react-scripts": "5.0.1",
