--- a/package.json
+++ b/package.json
@@ -1,43 +1,46 @@
 {
-  "name": "Wordle",
-  "version": "0.1.0",
-  "homepage": "https://nicolasfornicola.com",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "radium": "^0.26.2",
-    "react": "^18.1.0",
-    "react-animations": "^1.0.0",
-    "react-dom": "^18.1.0",
-    "react-keyboard-event-handler": "^1.5.4",
-    "react-scripts": "5.0.1",
-    "react-simple-keyboard": "^3.4.131",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
+    "proxy": "https://encounter-service.dndbeyond.com",
+    "name": "Wordle",
+    "version": "0.1.0",
+    "homepage": "https://nicolasfornicola.com",
+    "private": true,
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^13.2.0",
+        "@testing-library/user-event": "^13.5.0",
+        "axios": "^1.7.2",
+        "radium": "^0.26.2",
+        "react": "^18.1.0",
+        "react-animations": "^1.0.0",
+        "react-dom": "^18.1.0",
+        "react-keyboard-event-handler": "^1.5.4",
+        "react-router-dom": "^6.24.0",
+        "react-scripts": "5.0.1",
+        "react-simple-keyboard": "^3.4.131",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+        "react-app",
+        "react-app/jest"
     ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
