huge refactor, added dmview under /dnd/dm, searching statblocks encounter table add remove

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Nic's Wordle",
-  "name": "Wordle but worse",
+  "short_name": "Nic's Dnd Tracker",
+  "name": "Nic's Dnd Tracker",
   "icons": [
     {
       "src": "favicon.ico",
