--- a/package.json
+++ b/package.json
@@ -1,28 +1,19 @@
 {
     "proxy": "https://encounter-service.dndbeyond.com",
-    "name": "Wordle",
+    "name": "Nic's Dnd Tracker",
     "version": "0.1.0",
     "homepage": "https://nicolasfornicola.com",
     "private": true,
     "dependencies": {
-        "@emotion/react": "^11.11.4",
-        "@emotion/styled": "^11.11.5",
-        "@mui/material": "^5.16.0",
-        "@testing-library/jest-dom": "^5.16.4",
-        "@testing-library/react": "^13.2.0",
-        "@testing-library/user-event": "^13.5.0",
+        "@emotion/react": "^11.13.0",
+        "@emotion/styled": "^11.13.0",
+        "@mui/material": "^5.16.4",
         "axios": "^1.7.2",
-        "install": "^0.13.0",
-        "npm": "^10.8.1",
-        "radium": "^0.26.2",
         "react": "^18.1.0",
-        "react-animations": "^1.0.0",
         "react-dom": "^18.1.0",
-        "react-keyboard-event-handler": "^1.5.4",
         "react-router-dom": "^6.24.0",
         "react-scripts": "5.0.1",
-        "react-simple-keyboard": "^3.4.131",
-        "web-vitals": "^2.1.4"
+        "react-scrollable-list": "^1.3.1"
     },
     "scripts": {
         "start": "react-scripts start",
