--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@emotion/styled": "^11.13.0",
         "@mui/material": "^5.16.4",
         "axios": "^1.7.2",
+        "lz-string": "^1.5.0",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
         "react-router-dom": "^6.24.0",
