--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-    "proxy": "https://encounter-service.dndbeyond.com",
     "name": "Nic's Dnd Tracker",
     "version": "0.1.0",
-    "homepage": "https://nicolasfornicola.com",
+    "homepage": "/",
     "private": true,
     "dependencies": {
         "@emotion/react": "^11.13.0",
