--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "axios": "^1.7.2",
         "lz-string": "^1.5.0",
         "react": "^18.1.0",
+        "react-color": "^2.19.3",
         "react-dom": "^18.1.0",
         "react-loader-spinner": "^6.1.6",
         "react-router-dom": "^6.24.0",
