--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
         "@emotion/react": "^11.13.0",
         "@emotion/styled": "^11.13.0",
         "@mui/material": "^5.16.4",
+        "@uiw/react-color-compact": "^2.3.2",
         "axios": "^1.7.2",
         "lz-string": "^1.5.0",
         "react": "^18.1.0",
-        "react-color": "^2.19.3",
+        "react-colorful": "^5.6.1",
         "react-dom": "^18.1.0",
         "react-loader-spinner": "^6.1.6",
         "react-router-dom": "^6.24.0",
