--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
         "react": "^18.1.0",
         "react-colorful": "^5.6.1",
         "react-dom": "^18.1.0",
+        "react-ga4": "^2.1.0",
         "react-loader-spinner": "^6.1.6",
-        "react-router-dom": "^6.24.0",
+        "react-router-dom": "^6.27.0",
         "react-scripts": "5.0.1",
-        "react-scrollable-list": "^1.3.1"
+        "react-scrollable-list": "^1.3.1",
+        "socket.io-client": "^4.8.0"
     },
     "scripts": {
         "start": "react-scripts start",
