--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "axios": "^1.7.2",
         "lz-string": "^1.5.0",
         "react": "^18.1.0",
+        "react-bootstrap": "^2.10.5",
         "react-colorful": "^5.6.1",
         "react-dom": "^18.1.0",
         "react-ga4": "^2.1.0",
