--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react-router-dom": "^6.27.0",
         "react-scripts": "5.0.1",
         "react-scrollable-list": "^1.3.1",
+        "react-tabs": "^6.0.2",
         "socket.io-client": "^4.8.0"
     },
     "scripts": {
