homebrew and import tabs, new icon and name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Nic's Dnd Tracker",
-  "name": "Nic's Dnd Tracker",
+  "short_name": "DmB",
+  "name": "Dm Buddy",
   "icons": [
     {
       "src": "favicon.ico",
